Added controllers and stuff

--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,1 +1,1 @@
-HTTP_ANTAMINEN_URL = http://localhost:8080/Antaminen/api
+HTTP_ANTAMINEN_URL = http://196.168.24.100:8082/Rekening-administratie/api
