--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
 
     compile 'com.github.PTS-S62-E:Osake:3.1.0'
+    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.1.Final'
     install "org.wildfly:wildfly-dist:${wildflyVersion}@zip"
 }
 
