--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,1 +1,3 @@
-HTTP_ANTAMINEN_URL = http://196.168.24.100:8082/Rekening-administratie/api
+HTTP_ANTAMINEN_URL = http://192.168.24.100:8082/rekening-administratie/api
+HTTP_ANTAMINEN_EMAIL = proftaak@example.com
+HTTP_ANTAMINEN_PASSWORD = proftaak
