--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,3 +1,3 @@
-HTTP_ANTAMINEN_URL = http://localhost:8080/rekening-administratie/api
+HTTP_ANTAMINEN_URL = http://192.168.24.100:8082/registratie-verplaatsing/api
 HTTP_ANTAMINEN_EMAIL = proftaak@example.com
 HTTP_ANTAMINEN_PASSWORD = proftaak
